@@ -1,3 +1,7 @@
+2015-05-05  Jason Merrill  <jason@redhat.com>
+
+	* c.opt (Wterminate): New.
+
 2015-04-30  Marek Polacek  <polacek@redhat.com>
 
 	* c-common.c (maybe_warn_bool_compare): When comparing with 0/1,
